# machball

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  machball_tutorial.rst  newconf.py  requirements.txt  tutorial.rst
docs/apidocs/: aldmodels.rst  ballistic.rst  structure.rst  utils.rst
docs/basic/: about.rst  citing.rst  install.rst  started.rst
examples/: machball_tutorial.ipynb  structureio.py  via.py
machball/: __init__.py  aldmodels.py  structure.py  utils.py
machball/ballistic/: __init__.py  absmarkov.py  ballistic.py  features.py  structure.py  viewfactors.py
tests/: test_viewfactors.py
